Added additional LSTM and GRU diagrams

--- a/src/slideshow.scss
+++ b/src/slideshow.scss
@@ -39,3 +39,8 @@ img[alt="GRU Diagram"] {
 img[alt="LSTM vs GRU Diagram"] {
   width: 100%;
 }
+
+img[alt="GRU LSTM Diagram"] {
+  background-color: white !important;
+  width: 50%;
+}
